--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationEdit.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationEdit.cshtml
@@ -1,9 +1,9 @@
-﻿@model Medication
+﻿@model MedicationEditViewModel
 @{ 
     string imgSrc = "";
     string shapeDisp = "";
 
-    switch (Model.Shape)
+    switch (Model.Medication.Shape)
     {
         case "circle":
             imgSrc = "/img/shapes/circle.PNG";
@@ -79,14 +79,14 @@
 <div>
     <div class="alert-danger text-left" asp-validation-summary="All"></div>
     <form enctype="multipart/form-data" asp-action="MedicationEdit" method="post">
-        <input type="hidden" name="objID" value="@Model.Id">
+        <input type="hidden" asp-for="Medication.Id" value="@Model.Medication.Id">
         <input type="submit" />
         <!--Current Caretaker-->
-        <input type="hidden" value="@LoginStatus.LogginedUser.Id" asp-for="CaretakerID" />
-        <input type="hidden" value="@LoginStatus.SelectedPatient.PatientID" asp-for="PatientID" />
+        <input type="hidden" value="@Model.Caretaker.Id" asp-for="Medication.CaretakerID" />
+        <input type="hidden" value="@Model.Patient.PatientID" asp-for="Medication.PatientID" />
         <!-- Medication name field-->
         <div class="registerField">
-            <input class="form-control" asp-for="MedicationName" placeholder="Medication Name" />
+            <input class="form-control" asp-for="Medication.MedicationName" placeholder="Medication Name" />
         </div>
         <!-- Unit field-->
         <div class="registerField">
@@ -113,16 +113,16 @@
                     </td>
                 </tr>
             </table>
-            <input type="hidden" asp-for="Unit" id="concated-unit" />
+            <input type="hidden" asp-for="Medication.Unit" id="concated-unit" />
         </div>
         <!-- Quantity field-->
         <div class="registerField">
-            <input class="form-control" asp-for="Quantity" min="0" placeholder="Quantity" />
+            <input class="form-control" asp-for="Medication.Quantity" min="0" placeholder="Quantity" />
         </div>
 
         <!-- Frequency field-->
         <div class="registerField">
-            <select class="form-control mb-3" asp-for="Frequency">
+            <select class="form-control mb-3" asp-for="Medication.Frequency">
                 <option selected disabled>Frequency</option>
                 <option value="Every Day">Every Day</option> <!--Hours Between = 24 hours-->
                 <option value="Specific Days">Specific Days</option>
@@ -133,27 +133,27 @@
 
         <!-- First Dose Time field-->
         <div class="registerField">
-            <label style="margin: 0;" asp-for="FirstDoseTime">First Dose Time</label><br />
+            <label style="margin: 0;" asp-for="Medication.FirstDoseTime">First Dose Time</label><br />
             <div id="timepicker" class="timepicker">
-                <input class="timepickinput" type="text" value="00:00 AM" asp-for="FirstDoseTime" readonly />
+                <input class="timepickinput" type="text" value="00:00 AM" asp-for="Medication.FirstDoseTime" readonly />
             </div>
         </div>
 
         <!-- HoursBetween field-->
         <div class="registerField">
-            <input class="form-control" type="number" asp-for="HoursBetween" min="0" placeholder="HoursBetween" />
+            <input class="form-control" type="number" asp-for="Medication.HoursBetween" min="0" placeholder="HoursBetween" />
         </div>
 
         <!-- HoursBetween field-->
         <div class="registerField">
             <label style="margin: 0;">Select a shape as an identifier</label><br />
 
-            <select class="form-control" id="shape-selector" asp-for="Shape" onChange="shapeSelectorChange()">
-                <option value="@Model.Shape">@shapeDisp</option>
+            <select class="form-control" id="shape-selector" asp-for="Medication.Shape" onChange="shapeSelectorChange()">
+                <option value="@Model.Medication.Shape" selected>@shapeDisp</option>
                 @{
-                    if (LoginStatus.SelectedPatient.UnSelectedShapes.Count != 0)
+                    if (Model.Patient.UnSelectedShapes.Count != 0)
                     {
-                        foreach (Shape s in LoginStatus.SelectedPatient.UnSelectedShapes)
+                        foreach (Shape s in Model.Patient.UnSelectedShapes)
                         {
                                 <option value="@s.ShapeName">@s.ShapeDisplay</option>
                         }
@@ -178,7 +178,7 @@
             </div>
         </div>
 
-        <input type="hidden" value="@Model.Shape" name="oldShape"/>
+        <input type="hidden" value="@Model.Medication.Shape" name="oldShape"/>
     </form>
 </div>
 
