--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientLog.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientLog.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Log>
+﻿@*@model IEnumerable<Log>
 
 <h3><img class="heartBeatIcon" src="~/img/heart-beat-icon.png" alt="Heart Icon" />   Patient Profile</h3>
 
@@ -54,4 +54,4 @@ else
 
 <form asp-action="PatientList" asp-controller="Patient" method="get">
     <input type="submit" value="Back To List" />
-</form>
+</form>*@
