--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/_ViewImports.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MedOnTime_WebApp
 @using MedOnTime_WebApp.Models
+@using MedOnTime_WebApp.Views.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
