--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDelete.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDelete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MedOnTime_WebApp.Models.Medication
+﻿@model Medication
 
 @{
     ViewData["Title"] = "Edit";
@@ -15,6 +15,7 @@
             <td>
                 <form asp-action="MedicationDelete" method="post">
                     <input type="hidden" name="objID" value="@Model.Id" />
+                    <input type="hidden" name="patientID" value="@Model.PatientID"/>
                     <input type="hidden" name="medShape" value="@Model.Shape" />
                     <input type="submit" value="Delete" class="btn btn-danger" />
                 </form>
@@ -48,5 +49,5 @@
 </div>
 <div>
     @Html.ActionLink("Edit", "MedicationEdit", new { Id = Model.Id }) |
-    @Html.ActionLink("Back to list", "MedicationList")
+    @Html.ActionLink("Back to list", "MedicationList", new { patientID = Model.PatientID })
 </div>
