--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
@@ -1,12 +1,12 @@
-﻿@model Medication
+﻿@model MedicationDetailsViewModel
 
 @{ ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.imageSrc = Model.Id + ".jpg";
+    ViewBag.imageSrc = Model.Medication.Id + ".jpg";
 
     String ShapeSrc = "";
 
-    switch (Model.Shape)
+    switch (Model.Medication.Shape)
     {
         case "circle":
             ShapeSrc = "/img/shapes/circle.PNG";
@@ -86,7 +86,7 @@
     }
 
     function PrintAssets() {
-        var images = [ 'https://api.qrserver.com/v1/create-qr-code/?data=@Model.Id', '@ShapeSrc' ];
+        var images = [ 'https://api.qrserver.com/v1/create-qr-code/?data=@Model.Medication,Id', '@ShapeSrc' ];
         Pagelink = "about:blank";
         var pwa = window.open(Pagelink, "_new");
         pwa.document.open();
@@ -103,33 +103,33 @@
             Medication Name
         </dt>
         <dd class="col-sm-10">
-            @Model.MedicationName
+            @Model.Medication.MedicationName
         </dd>
         <dt class="col-sm-2">
             Quantity
         </dt>
         <dd class="col-sm-10">
-            @Model.Quantity
+            @Model.Medication.Quantity
         </dd>
         <dt class="col-sm-2">
             Time Of Taking
         </dt>
         <dd class="col-sm-10">
-            @Model.FirstDoseTime
+            @Model.Medication.FirstDoseTime
         </dd>
         <dt class="col-sm-2">
             Frequency
         </dt>
         <dd class="col-sm-10">
-            @Model.Frequency
+            @Model.Medication.Frequency
         </dd>
-        @if (Model.MedicationImage != null)
+        @if (Model.Medication.MedicationImage != null)
         {
             <dt class="col-sm-2">
                 Medication Image
             </dt>
             <dd class="col-sm-10">
-                <img src="~/img/@ViewBag.imageSrc" alt="@Model.MedicationName" width="300" style="object-fit:contain;" />
+                <img src="~/img/@ViewBag.imageSrc" alt="@Model.Medication.MedicationName" width="300" style="object-fit:contain;" />
             </dd>
         }
         <dt class="col-sm-2">
@@ -142,17 +142,16 @@
             QRCode<br />
         </dt>
         <dd download class="col-sm-10">
-            <img id="QRIMG" src="https://api.qrserver.com/v1/create-qr-code/?data=@Model.Id" width="100" height="100" alt="QR code" /><br />
+            <img id="QRIMG" src="https://api.qrserver.com/v1/create-qr-code/?data=@Model.Medication.Id" width="100" height="100" alt="QR code" /><br />
         </dd>
     </dl>
     <div>
         <button onclick="PrintAssets(); return false;" id="printImage">Print Shape and QR Code</button>
     </div>
 
-    @*<button onclick="PrintImage('imgs/480x480.jpg');" id="printImage">Print this Image</button>*@
 </div>
 <div>
-    @Html.ActionLink("Edit", "MedicationEdit", new { Id = Model.Id }) |
-    @Html.ActionLink("Delete", "MedicationDelete", new { Id = Model.Id }) |
-    @Html.ActionLink("Back to list", "MedicationList")
+    @Html.ActionLink("Edit", "MedicationEdit", new { Id = Model.Medication.Id }) |
+    @Html.ActionLink("Delete", "MedicationDelete", new { Id = Model.Medication.Id }) |
+    @Html.ActionLink("Back to list", "MedicationList", new { patientID = Model.PatientID })
 </div>
