--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationList.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationList.cshtml
@@ -1,16 +1,16 @@
-﻿@model IEnumerable<Medication>
+﻿@model MedicationListViewModel
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>@LoginStatus.SelectedPatient.FirstName's medications</h1>
+<h1>@Model.Patient.FirstName's medications</h1>
 
 <p>
     @Html.ActionLink("Add new medication", "MedicationForm")
 </p>
-@if (Model.Count() != 0)
+@if (Model.Medications.Count() != 0)
 {
     <table class="table">
         <thead>
@@ -25,7 +25,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @foreach (var item in Model.Medications)
             {
                 <tr>
                     <td>
@@ -36,7 +36,7 @@
                     </td>
                     <td>
                         @Html.ActionLink("Edit", "MedicationEdit", new { Id = item.Id }) |
-                        @Html.ActionLink("Details", "MedicationDetails", new { Id = item.Id }) |
+                        @Html.ActionLink("Details", "MedicationDetails", new { Id = item.Id, patientID = Model.Patient.PatientID }) |
                         @Html.ActionLink("Delete", "MedicationDelete", new { Id = item.Id })
                     </td>
                 </tr>
