--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/DeletePatient.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/DeletePatient.cshtml
@@ -1,4 +1,4 @@
-﻿@model MedOnTime_WebApp.Models.Patient
+﻿@model Patient
 
 @{ ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml"; }
