--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationForm.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationForm.cshtml
@@ -12,6 +12,10 @@
         <div class="registerField">
             <input class="form-control" asp-for="Medication.MedicationName" placeholder="Medication Name" />
         </div>
+        <!-- Medication condition field-->
+        <div class="registerField">
+            <input class="form-control" asp-for="Medication.Condition" placeholder="Condition" />
+        </div>
         <!-- Unit field-->
         <div class="registerField">
             <table>
