Added TempPassword for patient

--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/AddPatient.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/AddPatient.cshtml
@@ -22,6 +22,10 @@
         <div class="registerField">
             <input class="form-control" placeholder="Email" asp-for="Patient.Email" />
         </div>
+        <!--TempPassword field-->
+        <div class="registerField">
+            <input class="form-control" type="password" placeholder="Temporary password" name="tempPassword" />
+        </div>
         <!--Phone number field-->
         <div class="registerField">
             <input class="form-control" placeholder="Phone Number" asp-for="Patient.PhoneNum" />
