Enabling Log page

--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientLog.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientLog.cshtml
@@ -6,7 +6,7 @@
 @{ ViewData["Title"] = "Patient List";
     Layout = "~/Views/Shared/_Layout.cshtml"; }
 
-<h1>History of patient</h1>
+<h1>History of @ViewBag.patientFirstName</h1>
 @if (false)
 {
     <section class="homeContent">
