fixed some shapes that are not showing in medication form

--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
@@ -18,7 +18,7 @@
             ShapeSrc = "/img/shapes/Triangle.PNG";
             break;
         case "heart":
-            ShapeSrc = "/img/shapes/Heart.PNG";
+            ShapeSrc = "/img/shapes/heart.PNG";
             break;
         case "pentagon":
             ShapeSrc = "/img/shapes/pentagon.PNG";
@@ -45,7 +45,7 @@
             ShapeSrc = "/img/shapes/parallelogram.PNG";
             break;
         case "trapezuim":
-            ShapeSrc = "/img/shapes/Trapezuim.PNG";
+            ShapeSrc = "/img/shapes/Trapezium.PNG";
             break;
         case "rhombus":
             ShapeSrc = "/img/shapes/Rhombus.PNG";
@@ -130,7 +130,7 @@
             Identifier shape for this med<br />
         </dt>
         <dd download class="col-sm-10">
-            <img src="@ShapeSrc" width="100" height="100" alt="QR code" /><br />
+            <img src="@ShapeSrc" /><br />
         </dd>
         <dt class="col-sm-2">
             QRCode<br />
