--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationEdit.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationEdit.cshtml
@@ -18,7 +18,7 @@
             shapeDisp = "Triangle";
             break;
         case "heart":
-            imgSrc = "/img/shapes/Heart.PNG";
+            imgSrc = "/img/shapes/heart.PNG";
             shapeDisp = "Heart";
             break;
         case "pentagon":
@@ -54,7 +54,7 @@
             shapeDisp = "Parallelogram";
             break;
         case "trapezuim":
-            imgSrc = "/img/shapes/Trapezuim.PNG";
+            imgSrc = "/img/shapes/Trapezium.PNG";
             shapeDisp = "Trapezuim";
             break;
         case "rhombus":
