--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationForm.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationForm.cshtml
@@ -132,7 +132,7 @@
                     shapePreview.src = "/img/shapes/Triangle.PNG";
                     break;
                 case "heart":
-                    shapePreview.src = "/img/shapes/Heart.PNG";
+                    shapePreview.src = "/img/shapes/heart.PNG";
                     break;
                 case "pentagon":
                     shapePreview.src = "/img/shapes/pentagon.PNG";
@@ -159,7 +159,7 @@
                     shapePreview.src = "/img/shapes/parallelogram.PNG";
                     break;
                 case "trapezuim":
-                    shapePreview.src = "/img/shapes/Trapezuim.PNG";
+                    shapePreview.src = "/img/shapes/Trapezium.PNG";
                     break;
                 case "rhombus":
                     shapePreview.src = "/img/shapes/Rhombus.PNG";
