--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientDetails.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Patient/PatientDetails.cshtml
@@ -60,7 +60,7 @@
     </form>
     <form asp-action="PatientList" asp-controller="Patient" method="get">
         <input type="hidden" id="patient-list-caretakerObjId" value="" name="caretakerObjID" />
-        <input type="submit" value="Back To List" />
+        <input type="submit" value="Back To Patient List" />
     </form>
 </div>
 
